Rewrite controller tests to use SubmissionExecutionHandler - PlayerController